--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </header>
       </div>
       <section
-        class="h-100 d-flex flex-column align-items-center justify-content-center"
+        class="h-100 d-flex flex-column align-items-center justify-content-center "
       >
-        <nav class="container text-white row">
+        <nav class="container text-white row h-25 align-items-center  bg-transparent">
           <form>
             <fieldset>
               <div class="mb-3 d-flex">
@@ -51,35 +51,17 @@
                     <option>Ano</option>
                   </select>
                 </div>
-                <button
-                
-                  class=" btn-primary input-btn-save w-50 ms-5 fipe-save"
-                >
-                  Buscar
-                </button>
+                <div class="ms-4 w-100">
+                  <select class="form-select text-secondary form-option-valor">
+                    <option>Valor</option>
+                  </select>
+                </div>
               </div>
             </fieldset>
           </form>
         </nav>
       </section>
     </main>
-    <div class="modal-fipe hidden">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p>Modal body text goes here.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
